welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:8: error: identifier expected but integer literal found.
		else if ( (66 <= speed:Int) && (speed:Int <= 86))
                                                             ^caughtSpeeding:12: error: ')' expected but '}' found.
	}
        ^